Extract domain-specific fields